--- a/grafico_inter.ipynb
+++ b/grafico_inter.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f59a094a8f7403fa073bf27dba54525",
+       "model_id": "27242b8ac4d440e08df3cec20aba4c0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,10 +22,10 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.draw_graph(nodes_to_show=['AccessRequest', 'Application', 'ApplicationPermission', 'ApplicationPermissionUser', 'ApplicationPropertyDef', 'ApplicationPropertyVal', 'ApplicationRole', 'ApplicationRoleApprover', 'ApplicationRolePermission', 'ApplicationRoleUser', 'Device', 'DeviceCategory', 'DeviceFamily', 'DevicePermission', 'DeviceRole', 'DeviceRolePermission', 'DeviceRole_User', 'Device_DeviceCategory', 'Feature', 'FeatureAccess', 'File', 'FileSharing', 'FileType', 'FileVersion', 'Group', 'Notification', 'NotificationTarget', 'NotificationTopic', 'ObjectId', 'ObjectIdsRequest', 'PhysicalDevice', 'PhysicalDevice_User', 'Relt', 'Report', 'ReportDownload', 'RoleRequest', 'RoleRequestApproval', 'User', 'UserGroup'], show_incoming_edges=False, show_labels=True)>"
+       "<function __main__.draw_graph(nodes_to_show=['AccessRequest', 'Application', 'ApplicationPermission', 'ApplicationPermissionUser', 'ApplicationPropertyDef', 'ApplicationPropertyVal', 'ApplicationRole', 'ApplicationRoleApprover', 'ApplicationRolePermission', 'ApplicationRoleUser', 'Device', 'DeviceCategory', 'DeviceFamily', 'DevicePermission', 'DeviceRole', 'DeviceRolePermission', 'DeviceRole_User', 'Device_DeviceCategory', 'Feature', 'FeatureAccess', 'File', 'FileSharing', 'FileType', 'FileVersion', 'Group', 'Notification', 'NotificationTarget', 'NotificationTopic', 'ObjectId', 'ObjectIdsRequest', 'PhysicalDevice', 'PhysicalDevice_User', 'Relt', 'Report', 'ReportDownload', 'RoleRequest', 'RoleRequestApproval', 'User', 'UserGroup'], show_incoming_edges=False, show_labels=True, show_edge_labels=True)>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,8 @@
     "1) Query DB:\n",
     "SELECT \n",
     "    OBJECT_NAME(f.parent_object_id) AS TableName,\n",
-    "    OBJECT_NAME (f.referenced_object_id) AS ReferenceTableName\n",
+    "\tOBJECT_NAME (f.referenced_object_id) AS ReferenceTableName,\n",
+    "    COL_NAME(fc.parent_object_id, fc.parent_column_id) AS ForeignKeyColumnName\n",
     "FROM \n",
     "    sys.foreign_keys AS f\n",
     "INNER JOIN \n",
@@ -46,8 +47,7 @@
     "2) ChatGPT:\n",
     "Converti la seguente tabella in una serie di tuple.\n",
     "Per esempio: \n",
-    "(\"RoleRequestApproval\", \"FK_RoleRequestApproval_User\"),\n",
-    "(\"RoleRequestApproval\", \"FK_RoleRequestApproval_User_CompletedBy\"),\n",
+    "(\"a\", \"b\", \"c\"),\n",
     "\n",
     ".................................................\n",
     "\n",
