--- a/grafico_inter.ipynb
+++ b/grafico_inter.ipynb
@@ -60,67 +60,67 @@
     "\n",
     "# Inserisci qui le tue relazioni\n",
     "relazioni = [\n",
-    "    (\"ApplicationRolePermission\", \"ApplicationRole\"),\n",
-    "    (\"ApplicationRoleUser\", \"ApplicationRole\"),\n",
-    "    (\"RoleRequest\", \"ApplicationRole\"),\n",
-    "    (\"ApplicationRoleApprover\", \"ApplicationRole\"),\n",
-    "    (\"Device\", \"DeviceFamily\"),\n",
-    "    (\"DeviceRole_User\", \"DeviceRole\"),\n",
-    "    (\"PhysicalDevice_User\", \"DeviceRole\"),\n",
-    "    (\"DeviceRolePermission\", \"DeviceRole\"),\n",
-    "    (\"ObjectId\", \"ObjectIdsRequest\"),\n",
-    "    (\"PhysicalDevice_User\", \"PhysicalDevice\"),\n",
-    "    (\"Device_DeviceCategory\", \"DeviceCategory\"),\n",
-    "    (\"RoleRequestApproval\", \"RoleRequest\"),\n",
-    "    (\"DeviceRole\", \"Device\"),\n",
-    "    (\"PhysicalDevice\", \"Device\"),\n",
-    "    (\"Device_DeviceCategory\", \"Device\"),\n",
-    "    (\"DevicePermission\", \"Device\"),\n",
-    "    (\"ApplicationPropertyVal\", \"ApplicationRoleUser\"),\n",
-    "    (\"File\", \"FileType\"),\n",
-    "    (\"NotificationTarget\", \"Notification\"),\n",
-    "    (\"FeatureAccess\", \"Feature\"),\n",
-    "    (\"DeviceRolePermission\", \"DevicePermission\"),\n",
-    "    (\"Notification\", \"NotificationTopic\"),\n",
-    "    (\"ReportDownload\", \"Report\"),\n",
-    "    (\"ApplicationPropertyVal\", \"ApplicationPermissionUser\"),\n",
-    "    (\"ApplicationPropertyVal\", \"ApplicationRolePermission\"),\n",
-    "    (\"ApplicationPropertyVal\", \"ApplicationPropertyDef\"),\n",
-    "    (\"ApplicationPropertyVal\", \"ApplicationPropertyDef\"),\n",
-    "    (\"FileSharing\", \"File\"),\n",
-    "    (\"FileVersion\", \"File\"),\n",
-    "    (\"UserGroup\", \"Group\"),\n",
-    "    (\"FileSharing\", \"Group\"),\n",
-    "    (\"RoleRequestApproval\", \"User\"),\n",
-    "    (\"RoleRequestApproval\", \"User\"),\n",
-    "    (\"ApplicationRoleApprover\", \"User\"),\n",
-    "    (\"PhysicalDevice\", \"User\"),\n",
-    "    (\"PhysicalDevice_User\", \"User\"),\n",
-    "    (\"RoleRequest\", \"User\"),\n",
-    "    (\"RoleRequest\", \"User\"),\n",
-    "    (\"DeviceRole_User\", \"User\"),\n",
-    "    (\"File\", \"User\"),\n",
-    "    (\"Relt\", \"User\"),\n",
-    "    (\"Relt\", \"User\"),\n",
-    "    (\"FileSharing\", \"User\"),\n",
-    "    (\"FileVersion\", \"User\"),\n",
-    "    (\"AccessRequest\", \"User\"),\n",
-    "    (\"FeatureAccess\", \"User\"),\n",
-    "    (\"ApplicationPermissionUser\", \"User\"),\n",
-    "    (\"ReportDownload\", \"User\"),\n",
-    "    (\"ApplicationRoleUser\", \"User\"),\n",
-    "    (\"Group\", \"User\"),\n",
-    "    (\"UserGroup\", \"User\"),\n",
-    "    (\"ApplicationPermissionUser\", \"ApplicationPermission\"),\n",
-    "    (\"ApplicationRolePermission\", \"ApplicationPermission\"),\n",
-    "    (\"ApplicationRole\", \"Application\"),\n",
-    "    (\"FeatureAccess\", \"Application\"),\n",
-    "    (\"Notification\", \"Application\"),\n",
-    "    (\"ApplicationPropertyVal\", \"Application\"),\n",
-    "    (\"NotificationTopic\", \"Application\"),\n",
-    "    (\"ApplicationPermission\", \"Application\"),\n",
-    "    (\"ApplicationPropertyDef\", \"Application\"),\n",
-    "    (\"User\", \"Application\"),\n",
+    "    (\"ApplicationRolePermission\", \"ApplicationRole\", \"RoleID\"),\n",
+    "    (\"ApplicationRoleUser\", \"ApplicationRole\", \"RoleID\"),\n",
+    "    (\"RoleRequest\", \"ApplicationRole\", \"RoleID\"),\n",
+    "    (\"ApplicationRoleApprover\", \"ApplicationRole\", \"RoleID\"),\n",
+    "    (\"Device\", \"DeviceFamily\", \"DeviceFamilyId\"),\n",
+    "    (\"DeviceRole_User\", \"DeviceRole\", \"RoleID\"),\n",
+    "    (\"PhysicalDevice_User\", \"DeviceRole\", \"DeviceRoleID\"),\n",
+    "    (\"DeviceRolePermission\", \"DeviceRole\", \"RoleId\"),\n",
+    "    (\"ObjectId\", \"ObjectIdsRequest\", \"OidRequestID\"),\n",
+    "    (\"PhysicalDevice_User\", \"PhysicalDevice\", \"PhysicalDeviceID\"),\n",
+    "    (\"Device_DeviceCategory\", \"DeviceCategory\", \"DeviceCategoryID\"),\n",
+    "    (\"RoleRequestApproval\", \"RoleRequest\", \"RoleRequestID\"),\n",
+    "    (\"DeviceRole\", \"Device\", \"DeviceID\"),\n",
+    "    (\"PhysicalDevice\", \"Device\", \"DeviceID\"),\n",
+    "    (\"Device_DeviceCategory\", \"Device\", \"DeviceID\"),\n",
+    "    (\"DevicePermission\", \"Device\", \"DeviceID\"),\n",
+    "    (\"ApplicationPropertyVal\", \"ApplicationRoleUser\", \"RoleUserID\"),\n",
+    "    (\"File\", \"FileType\", \"TypeID\"),\n",
+    "    (\"NotificationTarget\", \"Notification\", \"NotificationID\"),\n",
+    "    (\"FeatureAccess\", \"Feature\", \"FeatureID\"),\n",
+    "    (\"DeviceRolePermission\", \"DevicePermission\", \"PermissionId\"),\n",
+    "    (\"Notification\", \"NotificationTopic\", \"TopicID\"),\n",
+    "    (\"ReportDownload\", \"Report\", \"ReportID\"),\n",
+    "    (\"ApplicationPropertyVal\", \"ApplicationPermissionUser\", \"PermissionUserID\"),\n",
+    "    (\"ApplicationPropertyVal\", \"ApplicationRolePermission\", \"RolePermissionID\"),\n",
+    "    (\"ApplicationPropertyVal\", \"ApplicationPropertyDef\", \"ApplicationID\"),\n",
+    "    (\"ApplicationPropertyVal\", \"ApplicationPropertyDef\", \"Name\"),\n",
+    "    (\"FileSharing\", \"File\", \"FileID\"),\n",
+    "    (\"FileVersion\", \"File\", \"FileID\"),\n",
+    "    (\"UserGroup\", \"Group\", \"GroupID\"),\n",
+    "    (\"FileSharing\", \"Group\", \"GroupID\"),\n",
+    "    (\"RoleRequestApproval\", \"User\", \"ForwardedBy\"),\n",
+    "    (\"RoleRequestApproval\", \"User\", \"CompletedBy\"),\n",
+    "    (\"ApplicationRoleApprover\", \"User\", \"UserID\"),\n",
+    "    (\"PhysicalDevice_User\", \"User\", \"OwnerID\"),\n",
+    "    (\"PhysicalDevice_User\", \"User\", \"UserID\"),\n",
+    "    (\"RoleRequest\", \"User\", \"UserID\"),\n",
+    "    (\"RoleRequest\", \"User\", \"CompletedBy\"),\n",
+    "    (\"DeviceRole_User\", \"User\", \"UserID\"),\n",
+    "    (\"File\", \"User\", \"Owner\"),\n",
+    "    (\"Relt\", \"User\", \"LockedBy\"),\n",
+    "    (\"Relt\", \"User\", \"UnlockedBy\"),\n",
+    "    (\"FileSharing\", \"User\", \"UserID\"),\n",
+    "    (\"FileVersion\", \"User\", \"UploadedBy\"),\n",
+    "    (\"AccessRequest\", \"User\", \"UserId\"),\n",
+    "    (\"FeatureAccess\", \"User\", \"UserID\"),\n",
+    "    (\"ApplicationPermissionUser\", \"User\", \"UserID\"),\n",
+    "    (\"ReportDownload\", \"User\", \"UserID\"),\n",
+    "    (\"ApplicationRoleUser\", \"User\", \"UserID\"),\n",
+    "    (\"Group\", \"User\", \"Owner\"),\n",
+    "    (\"UserGroup\", \"User\", \"UserID\"),\n",
+    "    (\"ApplicationPermissionUser\", \"ApplicationPermission\", \"PermissionID\"),\n",
+    "    (\"ApplicationRolePermission\", \"ApplicationPermission\", \"PermissionID\"),\n",
+    "    (\"ApplicationRole\", \"Application\", \"ApplicationID\"),\n",
+    "    (\"FeatureAccess\", \"Application\", \"ApplicationID\"),\n",
+    "    (\"Notification\", \"Application\", \"ApplicationID\"),\n",
+    "    (\"ApplicationPropertyVal\", \"Application\", \"ApplicationID\"),\n",
+    "    (\"NotificationTopic\", \"Application\", \"ApplicationID\"),\n",
+    "    (\"ApplicationPermission\", \"Application\", \"ApplicationID\"),\n",
+    "    (\"ApplicationPropertyDef\", \"Application\", \"ApplicationID\"),\n",
+    "    (\"User\", \"Application\", \"InsertedFrom\"),\n",
     "]\n",
     "\n",
     "# Crea un grafo vuoto\n",
