added name arches

--- a/grafico_inter.ipynb
+++ b/grafico_inter.ipynb
@@ -128,7 +128,7 @@
     "\n",
     "# Aggiungi i nodi e gli archi al grafo\n",
     "for relazione in relazioni:\n",
-    "    G.add_edge(*relazione)\n",
+    "    G.add_edge(relazione[0], relazione[1], name=relazione[2])\n",
     "\n",
     "# Crea una disposizione per i nodi del grafo\n",
     "pos = nx.spring_layout(G, k=0.5, iterations=20)\n",
@@ -139,7 +139,7 @@
     "# Crea un elenco di tutti i nodi\n",
     "all_nodes = sorted(list(G.nodes()))\n",
     "\n",
-    "def draw_graph(nodes_to_show=all_nodes, show_incoming_edges=False, show_labels=True):\n",
+    "def draw_graph(nodes_to_show=all_nodes, show_incoming_edges=False, show_labels=True, show_edge_labels=True):\n",
     "    # Se nodes_to_show è una stringa vuota, mostrare tutti i nodi, altrimenti filtrare\n",
     "    if nodes_to_show == '':\n",
     "        nodes = all_nodes\n",
@@ -157,6 +157,9 @@
     "    # Grandezza grafico\n",
     "    plt.rcParams[\"figure.figsize\"] = [23, 9]\n",
     "\n",
+    "    # Imposta il colore di sfondo degli assi su grigio chiaro\n",
+    "    #plt.gca().set_facecolor('gainsboro')\n",
+    "\n",
     "    # Disegna i nodi con colori diversi\n",
     "    nx.draw_networkx_nodes(G, pos, nodelist=nodes, node_color=[color_map[node] for node in nodes])\n",
     "\n",
@@ -169,15 +172,25 @@
     "    if show_labels:\n",
     "        nx.draw_networkx_labels(G, pos, labels={node: node for node in nodes}, font_size=10)\n",
     "\n",
+    "    # Disegna le etichette degli archi se show_edge_labels è True\n",
+    "    if show_edge_labels:\n",
+    "        edge_labels = {(n1, n2): n3 for n1, n2, n3 in relazioni}\n",
+    "        for n1, n2 in G.edges():\n",
+    "            if n1 in nodes and n2 in nodes:\n",
+    "                nx.draw_networkx_edge_labels(G, pos, edge_labels={(n1, n2): edge_labels[(n1, n2)]}) #font_color=color_map[n1]\n",
+    "\n",
     "    plt.show()\n",
     "\n",
     "# Aggiungi un widget Checkbox e SelectMultiple\n",
-    "show_labels_check = Checkbox(value=True, description='Mostra etichette')\n",
+    "show_labels_check = Checkbox(value=True, description='Mostra nomi Nodi')\n",
     "show_incoming_edges_check = Checkbox(value=False, description='NO collegamenti entrata')\n",
     "show_nodes_SelectMultiple = SelectMultiple(options=all_nodes, value=all_nodes, rows=len(all_nodes),description='Nodi:')\n",
+    "show_edge_labels_check = Checkbox(value=True, description='Mostra nomi Archi')\n",
     "\n",
     "# Usa la funzione interact per creare controlli interattivi\n",
-    "interact(draw_graph, nodes_to_show=show_nodes_SelectMultiple, show_incoming_edges=show_incoming_edges_check, show_labels=show_labels_check)"
+    "interact(draw_graph, nodes_to_show=show_nodes_SelectMultiple, \n",
+    "         show_incoming_edges=show_incoming_edges_check, show_labels=show_labels_check, \n",
+    "         show_edge_labels=show_edge_labels_check)"
    ]
   }
  ],
